Include extended hash support in CI Vote API calls
Previously, CI Vote API calls only required the commit and distro
hash. This can cause an issue when trying to vote on a commit that
has an extended hash, since there may be more than one commit with
the same commit and distro, but different extended hash.

This commit adds extended_hash support to the following API calls:

- /api/repo_status
- /api/report_result

It also ensures that any API call returning information on a CI vote
returns the extended_hash.

When voting, the extended_hash parameter will be optional. If not
specified, the same behavior we have today will be preserved, and the
latest commit with the requested commit/distro hash will be used for
the vote.
